<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_15"
    tools:context="mx.edu.utng.dloza.crudcelphone.AddCelphoneActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_celphone"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/celphone_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mark" />

    <EditText
        android:id="@+id/celphone_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/model" />

    <EditText
        android:id="@+id/celphone_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/color" />

    <EditText
        android:id="@+id/celphone_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/memory" />

    <EditText
        android:id="@+id/celphone_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cost" />

    <EditText
        android:id="@+id/celphone_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/company" />



    <Button
        android:id="@+id/add_new_celphone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_celphon"/>

</LinearLayout>
