<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="size_15"
    android:layout_height="match_parent">

<android.support.v7.widget.CardView
    android:background=""
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/orange"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_padding"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/name"
                android:text="@string/mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mark"
                android:text="@string/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/model"
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/transmission"
                android:text="@string/memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cost"
                android:text="@string/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/company"
                android:text="@string/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
